--- a/stellang/web/blog/authors.yml
+++ b/stellang/web/blog/authors.yml
@@ -1,27 +1,6 @@
-kazooki:
-  name: starloexoliz
-  title: Admin/Owner of Crabby
-  url: https://github.com/Kazooki123
-  image_url: https://github.com/Kazooki123.png
-  email: kazooki@gmail.com
-
-satvik:
-  name: Mr Coder
-  title: Front End Developer
-  url: https://github.com/Satvik-2727
-  image_url: https://github.com/Satvik-2727.png
-  email: techblogs2021@gmail.com
-
-saturo:
-  name: Scarleyegaming
-  title: Full Stack Developer
-  url: https://github.com/Scarleyegaming
-  image_url: https://github.com/Scarleyegaming.png
-  email: saturo@gmail.com
-
-trnx:
-  name: trnxdev
-  title: Crabby Developer
-  url: https://github.com/trnxdev
-  image_url: https://github.com/trnxdev.png
-  email: trnxdev@gmail.com
+Mahesh:
+  name: Mahesh
+  title: Admin/Owner of Stel-lang
+  url: https://github.com/MaheshDhingra
+  image_url: https://github.com/MaheshDhingra.png
+  email: dhingram447@gmail.com
