--- a/stellang/Cargo.toml
+++ b/stellang/Cargo.toml
@@ -5,10 +5,19 @@ edition = "2021"
 
 [dependencies]
 hex = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
+semver = "1.0"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1.0", features = ["full"] }
 
 [[bin]]
 name = "stellang"
 path = "src/main.rs"
+
+[[bin]]
+name = "stel"
+path = "src/bin/stel.rs"
 
 [[test]]
 name = "operator_tests"
